rhai/codegen/ui_tests/rhai_fn_rename_collision_with_itself.stderr
error: duplicate Rhai signature for 'foo'
  --> $DIR/rhai_fn_rename_collision_with_itself.rs:12:15
   |
12 |     #[rhai_fn(name = "foo", name = "bar", name = "foo")]
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: duplicated function renamed 'foo'
  --> $DIR/rhai_fn_rename_collision_with_itself.rs:12:15
   |
12 |     #[rhai_fn(name = "foo", name = "bar", name = "foo")]
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_rename_collision_with_itself.rs:20:8
   |
20 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
